# mod_fido

./: CMakeLists.txt  README.md
include/mod_fido/: function_contracts.h  function_decl.h  macro_tricks.h  model_assert.h
include/mod_fido/models/kernel/: sys.h  tree.h
include/mod_fido/properties/: kernel.h
models/: CMakeLists.txt
models/auth_cache_entry_cmp/: CMakeLists.txt  main.c
models/mod_fido_handler/: CMakeLists.txt  main.c
models/mod_fido_instance_create_release/: CMakeLists.txt  main.c
models/mod_fido_instance_hook_ioctl_locked/: CMakeLists.txt  main.c
models/mod_fido_instance_hook_ioctl_locked_shadow/: CMakeLists.txt  main.c
models/mod_fido_instance_hooked_file_handle_close/: CMakeLists.txt  main.c
models/mod_fido_instance_hooked_sys_ioctl/: CMakeLists.txt  main.c
models/mod_fido_instance_hooked_sys_ioctl_shadow/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_TIOCCHKVERAUTH_handler/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_TIOCCHKVERAUTH_handler_shadow/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_TIOCCLRVERAUTH_handler/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_TIOCCLRVERAUTH_handler_shadow/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_TIOCSETVERAUTH_handler/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_TIOCSETVERAUTH_handler_shadow/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_tty_get/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_tty_get_locked/: CMakeLists.txt  main.c
models/mod_fido_instance_ioctl_tty_get_shadow/: CMakeLists.txt  main.c
models/mod_fido_instance_release/: CMakeLists.txt  main.c
models/mod_fido_instance_unhook_ioctl_locked/: CMakeLists.txt  main.c
models/mod_fido_instance_unhook_ioctl_locked_noop_shadow/: CMakeLists.txt  main.c
models/shadow/auth_cache/: auth_cache_entry_create_random.c  auth_cache_table_find.c  auth_cache_table_find_prefill.c  auth_cache_table_find_source.c  auth_cache_table_init_prefill.c  auth_cache_table_insert_sink.c  auth_cache_table_next_simple_loop.c  auth_cache_table_release_prefill.c  auth_cache_table_remove_prefill.c  auth_cache_table_remove_simple_loop.c  auth_cache_table_start_simple_loop.c
models/shadow/kernel/: cap_rights_init.c  cdev_create_random.c  copyin.c  fdrop.c  fget.c  fileops_default_close.c  getsbinuptime.c  ioctl_args_create_random.c  mtx_destroy.c  mtx_init.c  mtx_lock.c  mtx_unlock.c  priv_check.c  property_error_code_is_expected_for_file_close.c  property_error_code_is_expected_for_ioctl_syscall.c  property_file_handle_valid.c  property_ioctl_args_valid.c  property_kernel_thread_valid.c  property_mtx_locked.c  property_mtx_valid.c  property_tty_valid.c  sysent.c  thread_create_random.c  tty_create_random.c  tty_udev.c  vnode_create_random.c
models/shadow/mod_fido/: mod_fido_instance_create_random.c  mod_fido_instance_hook_ioctl_locked.c  mod_fido_instance_hook_pts_fops_locked.c  mod_fido_instance_hooked_sys_ioctl.c  mod_fido_instance_ioctl_TIOCCHKVERAUTH_handler.c  mod_fido_instance_ioctl_TIOCCLRVERAUTH_handler.c  mod_fido_instance_ioctl_TIOCSETVERAUTH_handler.c  mod_fido_instance_ioctl_tty_get.c  mod_fido_instance_unhook_ioctl_locked_noop.c  property_mod_fido_auth_cache_entry_valid.c  property_mod_fido_instance_hooked.c  property_mod_fido_instance_locked.c  property_mod_fido_instance_valid.c
src/: CMakeLists.txt  Makefile  auth_cache.h  auth_cache_entry_cmp.c  auth_cache_table.c  malloc_arena.c  mod_fido.c  mod_fido.h  mod_fido_inst.c  mod_fido_instance_create.c  mod_fido_instance_hook_ioctl_locked.c  mod_fido_instance_hook_pts_fops_locked.c  mod_fido_instance_hooked_file_handle_close.c  mod_fido_instance_hooked_sys_ioctl.c  mod_fido_instance_ioctl_TIOCCHKVERAUTH_handler.c  mod_fido_instance_ioctl_TIOCCLRVERAUTH_handler.c  mod_fido_instance_ioctl_TIOCSETVERAUTH_handler.c  mod_fido_instance_ioctl_tty_get.c  mod_fido_instance_ioctl_tty_get_locked.c  mod_fido_instance_release.c  mod_fido_instance_unhook_ioctl_locked.c
